--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -18,6 +18,7 @@ StandardOutput=append:/tmp/airbnb-access.log
 StandardError=append:/tmp/airbnb-error.log
 # Identifier for the syslog messages.
 SyslogIdentifier=gunicorn
+Environment="PATH=/usr/bin"
 
 [Install]
 # Enable the service for multi-user.target.
